docs: use CalculateShippingOptionPriceDTO for param types in calculatePrice

--- a/www/apps/resources/references/fulfillment_provider/classes/fulfillment_provider.AbstractFulfillmentProviderService/page.mdx
+++ b/www/apps/resources/references/fulfillment_provider/classes/fulfillment_provider.AbstractFulfillmentProviderService/page.mdx
@@ -242,9 +242,9 @@ you can retrieve the calculated price of the shipping method.
 class MyFulfillmentProviderService extends AbstractFulfillmentProviderService {
   // ...
   async calculatePrice(
-    optionData: Record<string, unknown>,
-    data: Record<string, unknown>,
-    context: any
+    optionData: CalculateShippingOptionPriceDTO["optionData"],
+    data: CalculateShippingOptionPriceDTO["data"],
+    context: CalculateShippingOptionPriceDTO["context"]
   ): Promise<CalculatedShippingOptionPrice> {
     // assuming the client can calculate the price using
     // the third-party service
