--- a/www/apps/resources/app/architectural-modules/file/s3/page.mdx
+++ b/www/apps/resources/app/architectural-modules/file/s3/page.mdx
@@ -108,8 +108,7 @@ The S3 File Module Provider integrates Amazon S3 and services following a compat
        - Confirm by clicking "Create bucket"
     3. Configure public access:
        - On your bucket's dashboard, click on the Settings tab.
-       - Locate the Public Access section
-       - Enable R2.dev subdomain access
+       - Scroll down to the Public Access section, and click on "Allow Access" in the "R2.dev subdomain" card.
        - Type 'allow' to confirm
        - Copy the Public R2.dev Bucket URL for your `S3_FILE_URL`
     4. Set up your credentials:
