--- a/www/apps/resources/app/architectural-modules/file/s3/page.mdx
+++ b/www/apps/resources/app/architectural-modules/file/s3/page.mdx
@@ -119,7 +119,7 @@ The S3 File Module Provider integrates Amazon S3 and services following a compat
          - Edit the **R2 Token** name
          - Under **Permissions**, select appropriate permission types
          - Optionally scope token to specific buckets for Object Read/Write permissions
-         - Click **Create API Token**
+         - Once done, click the "Create API Token" button.
          - Save the generated token as your **`S3_ACCESS_KEY_ID`, `S3_SECRET_ACCESS_KEY`**
        - Record your bucket name for configuration
        - Save your public bucket URL for reference
