--- a/www/apps/resources/app/architectural-modules/file/s3/page.mdx
+++ b/www/apps/resources/app/architectural-modules/file/s3/page.mdx
@@ -118,7 +118,7 @@ The S3 File Module Provider integrates Amazon S3 and services following a compat
          - Select "Create API token"
          - Edit the "R2 Token" name
          - Under **Permissions**, select appropriate permission types
-         - Optionally scope token to specific buckets for Object Read/Write permissions
+         - You can optionally specify the buckets that this API token has access to under the "Specify bucket(s)" section.
          - Once done, click the "Create API Token" button.
          - You'll receive an access key ID and a secret access key. Save them to use them later for the `S3_ACCESS_KEY_ID` and `S3_SECRET_ACCESS_KEY` environment variables.
        - Record your bucket name for configuration
