--- a/www/apps/resources/app/commerce-modules/auth/auth-providers/github/page.mdx
+++ b/www/apps/resources/app/commerce-modules/auth/auth-providers/github/page.mdx
@@ -36,31 +36,33 @@ Learn about the authentication flow in [this guide](../../authentication-route/p
 Add the module to the array of providers passed to the Auth Module:
 
 ```ts title="medusa-config.ts"
-import { Modules } from "@medusajs/framework/utils"
+import { Modules, ContainerRegistrationKeys } from "@medusajs/framework/utils"
 
 // ...
 
-const modules = {
+module.exports = defineConfig({
   // ...
-  [Modules.AUTH]: {
-    resolve: "@medusajs/medusa/auth",
-    dependencies: [Modules.CACHE, ContainerRegistrationKeys.LOGGER],
-    options: {
-      providers: [
-        // other providers...
-        {
-          resolve: "@medusajs/medusa/auth-github",
-          id: "github",
-          options: {
-            clientId: process.env.GITHUB_CLIENT_ID,
-            clientSecret: process.env.GITHUB_CLIENT_SECRET,
-            callbackUrl: process.env.GITHUB_CALLBACK_URL,
+  modules: [
+    {
+      resolve: "@medusajs/medusa/auth",
+      dependencies: [Modules.CACHE, ContainerRegistrationKeys.LOGGER],
+      options: {
+        providers: [
+          // other providers...
+          {
+            resolve: "@medusajs/medusa/auth-github",
+            id: "github",
+            options: {
+              clientId: process.env.GITHUB_CLIENT_ID,
+              clientSecret: process.env.GITHUB_CLIENT_SECRET,
+              callbackUrl: process.env.GITHUB_CALLBACK_URL,
+            },
           },
-        },
-      ],
-    },
-  },
-}
+        ],
+      },
+    }
+  ],
+})
 ```
 
 ### Environment Variables
