--- a/www/apps/resources/app/commerce-modules/auth/auth-providers/google/page.mdx
+++ b/www/apps/resources/app/commerce-modules/auth/auth-providers/google/page.mdx
@@ -36,31 +36,36 @@ Learn about the authentication flow for third-party providers in [this guide](..
 Add the module to the array of providers passed to the Auth Module:
 
 ```ts title="medusa-config.ts"
-import { Modules } from "@medusajs/framework/utils"
+import { Modules, ContainerRegistrationKeys } from "@medusajs/framework/utils"
 
 // ...
 
-const modules = {
+module.exports = defineConfig({
   // ...
-  [Modules.AUTH]: {
-    resolve: "@medusajs/medusa/auth",
-    dependencies: [Modules.CACHE, ContainerRegistrationKeys.LOGGER],
-    options: {
-      providers: [
-        // other providers...
-        {
-          resolve: "@medusajs/medusa/auth-google",
-          id: "google",
-          options: {
-            clientId: process.env.GOOGLE_CLIENT_ID,
-            clientSecret: process.env.GOOGLE_CLIENT_SECRET,
-            callbackUrl: process.env.GOOGLE_CALLBACK_URL,
-          },
+  modules: [
+    {
+      // ...
+      [Modules.AUTH]: {
+        resolve: "@medusajs/medusa/auth",
+        dependencies: [Modules.CACHE, ContainerRegistrationKeys.LOGGER],
+        options: {
+          providers: [
+            // other providers...
+            {
+              resolve: "@medusajs/medusa/auth-google",
+              id: "google",
+              options: {
+                clientId: process.env.GOOGLE_CLIENT_ID,
+                clientSecret: process.env.GOOGLE_CLIENT_SECRET,
+                callbackUrl: process.env.GOOGLE_CALLBACK_URL,
+              },
+            },
+          ],
         },
-      ],
-    },
-  },
-}
+      },
+    }
+  ],
+})
 ```
 
 ### Environment Variables
