--- a/www/apps/resources/app/commerce-modules/auth/module-options/page.mdx
+++ b/www/apps/resources/app/commerce-modules/auth/module-options/page.mdx
@@ -27,7 +27,7 @@ By default, the `emailpass` provider is registered to authenticate customers and
 For example:
 
 ```ts title="medusa-config.ts"
-import { Modules } from "@medusajs/framework/utils"
+import { Modules, ContainerRegistrationKeys } from "@medusajs/framework/utils"
 
 // ...
 
