--- a/packages/admin/dashboard/src/i18n/translations/$schema.json
+++ b/packages/admin/dashboard/src/i18n/translations/$schema.json
@@ -2671,11 +2671,19 @@
                   "type": "string"
                 }
               },
-              "required": ["alreadyManaged", "alreadyManagedWithSku"],
+              "required": [
+                "alreadyManaged",
+                "alreadyManagedWithSku"
+              ],
               "additionalProperties": false
             }
           },
-          "required": ["heading", "description", "loading", "tooltips"],
+          "required": [
+            "heading",
+            "description",
+            "loading",
+            "tooltips"
+          ],
           "additionalProperties": false
         },
         "toasts": {
@@ -9305,6 +9313,9 @@
         "deleteUserWarning": {
           "type": "string"
         },
+        "deleteUserSuccess": {
+          "type": "string"
+        },
         "invite": {
           "type": "string"
         }
@@ -9325,6 +9336,7 @@
         "inviteStatus",
         "roles",
         "deleteUserWarning",
+        "deleteUserSuccess",
         "invite"
       ],
       "additionalProperties": false
